--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "1.0.0",
   "main": "server.js",
   "scripts": {
+    "start": "node server.js",
+    "build": "npm install",
     "dev": "nodemon server.js"
   },
   "type": "module",
@@ -10,6 +12,7 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "md-to-pdf": "^5.2.5",
     "nodemon": "^3.1.9"
   },
   "dependencies": {
@@ -17,6 +20,7 @@
     "@socket.io/redis-adapter": "^8.3.0",
     "axios": "^1.7.9",
     "body-parser": "^1.20.3",
+    "cloudinary": "^2.8.0",
     "cookie-parser": "^1.4.7",
     "cookie-session": "^2.1.0",
     "cors": "^2.8.5",
@@ -29,6 +33,7 @@
     "ioredis": "^5.8.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.9.4",
+    "multer": "^2.0.2",
     "nodemailer": "^7.0.9",
     "redis": "^4.7.0",
     "socket.io": "^4.8.1",
